syntax = "proto3";

package library;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (UserResponse);
  rpc GetUser (GeteUserRequest) returns (GetUserResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string contactno = 3;
  string address = 4;
  string aadhar_id = 5;
}

message UserResponse {
  int32 user_id = 1;
}

message UpdateUserRequest {
  string name = 1;
  string email = 2;
  string contactno = 3;
  string address = 4;
  string aadhar_id = 5;
}

message DeleteUserRequest {
  int32 user_id = 1;
}

message GeteUserRequest {
  int32 user_id = 1;
}

message GetUserResponse {
  string name = 1;
  string email = 2;
  string contactno = 3;
  string address = 4;
  string aadhar_id = 5;
}

message GetAllUsersRequest {

}

message Userdetails {
  int32 user_id = 1;
  string name = 2;
  string email = 3;
  string contactno = 4;
  string address = 5;
  string aadhar_id = 6;
}

message GetAllUsersResponse {
  repeated Userdetails User = 1;
}

